--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+!enable-registry/project/src/main/**/target/
+!enable-registry/project/src/test/**/target/
 application.properties
 
 ### STS ###
@@ -28,8 +28,8 @@ application.properties
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+!enable-registry/project/src/main/**/build/
+!enable-registry/project/src/test/**/build/
 
 
 # design-frontend
