--- a/enable-registry/project/src/main/resources/application-prod.yml
+++ b/enable-registry/project/src/main/resources/application-prod.yml
@@ -7,5 +7,5 @@ server:
 
 eureka:
   client:
-    registerWithEureka: true
-    fetchRegistry: false
+    register-with-eureka: true
+    fetch-registry: false
