--- a/enable-user-service/project/src/main/resources/application-prod.properties
+++ b/enable-user-service/project/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8080
 
 # RabbitMQ configuration
-spring.rabbitmq.host: cyberry-enable-message-bus
-spring.rabbitmq.port: 5672
-spring.rabbitmq.username: guest
-spring.rabbitmq.password: guest
+spring.rabbitmq.host=cyberry-enable-message-bus
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
