--- a/enable-user-service/project/src/main/resources/application-prod.yml
+++ b/enable-user-service/project/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-      name: enable-execution-service
+    name: enable-user-service
   datasource:
     url: ${SPRING_DATASOURCE_URL}
     username: ${DB_USERNAME}
@@ -19,13 +19,11 @@ spring:
         format_sql: true
 
 server:
-  port: 8762
-
+  port: 8763
 
 info:
   app:
     name: ${spring.application.name}
-
 
 eureka:
   client:
@@ -44,3 +42,9 @@ management:
           - env
           - health
           - info
+
+# RabbitMQ configuration
+#spring.rabbitmq.host=cyberry-enable-message-bus
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
