--- a/enable-api-gateway/project/src/main/resources/application-prod.yml
+++ b/enable-api-gateway/project/src/main/resources/application-prod.yml
@@ -1,15 +1,26 @@
-# Variables
-#  ENABLE_USER_SERVICE_BASEURL: ${ENABLE_USER_SERVICE_BASEURL}
-#  ENABLE_EXECUTION_SERVICE_BASEURL: ${ENABLE_EXECUTION_SERVICE_BASEURL}
-
 server:
   port: 8760
-  #spring.main.allow-bean-definition-overriding: true
-  #spring.main.web-application-type: reactive
 
 spring:
   application:
     name: enable-api-gateway
+  main:
+    allow-bean-definition-overriding: true
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  session:
+    jdbc:
+      initialize-schema: always
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
   cloud:
     gateway:
       routes:
@@ -25,19 +36,6 @@ spring:
             - Path=/task/**
           filters:
             - RewritePath=/task/(?<segment>.*), /api/task/$\{segment}
-
-        - id: user
-          uri: lb://enable-user-service
-          predicates:
-            - Path=/user/**
-          filters:
-            - RewritePath=/user/(?<segment>.*), /api/user/$\{segment}
-        - id: auth
-          uri: lb://enable-user-service
-          predicates:
-            - Path=/auth/**
-          filters:
-            - RewritePath=/auth/(?<segment>.*), /api/auth/$\{segment}
 
         - id: enable-registry
           uri: lb://enable-registry
