Changed rabbitmq ports

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,9 +15,9 @@ services:
   enable-rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: 'enable-rabbitmq'
-    ports:
-      - 5672:5672
-      - 15672:15672
+    expose:
+      - 5672
+      - 15672
     environment:
       RABBITMQ_DEFAULT_USER: '${RABBITMQ_USER:-guest}'
       RABBITMQ_DEFAULT_PASS: '${RABBITMQ_PASS:-guest}'
