update integration tests for v2

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     environment:
       ACCEPT_EULA: 'Y'
       SA_PASSWORD: '${DB_ROOT_PASSWORD:-Secret1234}'
+    ports:
+      - "1433:1433"
     expose:
       - "1433"
     volumes:
@@ -59,6 +61,8 @@ services:
     environment:
       ACCEPT_EULA: 'Y'
       SA_PASSWORD: '${DB_ROOT_PASSWORD:-Secret1234}'
+    ports:
+      - "1434:1433"
     expose:
       - "1433"
     volumes:
@@ -91,6 +95,8 @@ services:
     environment:
       ACCEPT_EULA: 'Y'
       SA_PASSWORD: '${DB_ROOT_PASSWORD:-Secret1234}'
+    ports:
+      - "1435:1433"
     expose:
       - "1433"
     volumes:
@@ -127,27 +133,27 @@ services:
       spring.profiles.active: 'prod'
       EUREKA_SERVER: 'http://enable-registry:8761/eureka'
 
-  enable-webapp-management:
-    image: liamvaessen/enable-webapp-management:development
-    container_name: enable-webapp-management
-    ports:
-      - "127.0.0.1:80:8080"
-    depends_on:
-      - enable-gateway
-    environment:
-      VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
-      VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
-      VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
+  # enable-webapp-management:
+  #   image: liamvaessen/enable-webapp-management:development
+  #   container_name: enable-webapp-management
+  #   ports:
+  #     - "127.0.0.1:80:8080"
+  #   depends_on:
+  #     - enable-gateway
+  #   environment:
+  #     VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
+  #     VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
+  #     VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
 
-  enable-webapp-design:
-    image: liamvaessen/enable-webapp-design:development
-    container_name: enable-webapp-design
-    ports:
-      - "127.0.0.1:8090:8080"
-    environment:
-      VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
-      VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
-      VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
+  # enable-webapp-design:
+  #   image: liamvaessen/enable-webapp-design:development
+  #   container_name: enable-webapp-design
+  #   ports:
+  #     - "127.0.0.1:8090:8080"
+  #   environment:
+  #     VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
+  #     VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
+  #     VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
 
 volumes:
   db-data-execution:
