Updated docker-compose and e2e tests

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   enable-registry:
     image: liamvaessen/enable-registry:development
@@ -129,7 +127,7 @@ services:
     image: liamvaessen/enable-gateway:development
     container_name: enable-gateway
     ports:
-      - "127.0.0.1:8080:8443"
+      - "127.0.0.1:80:8443"
     depends_on:
       - enable-registry
     environment:
@@ -138,28 +136,31 @@ services:
       KEY_STORE_PASSWORD: ${KEY_STORE_PASSWORD:-Liam1255}
       spring.profiles.active: 'prod'
       EUREKA_SERVER: 'http://enable-registry:8761/eureka'
+      WEBAPP_MANAGEMENT_URL: 'http://enable-webapp-management:80'
+      WEBAPP_DESIGN_URL: 'http://enable-webapp-design:80'
+      WEBAPP_MARKETPLACE_URL: 'http://enable-webapp-marketplace:80'
 
   enable-webapp-management:
     image: liamvaessen/enable-webapp-management:development
     container_name: enable-webapp-management
     ports:
-      - "127.0.0.1:80:8080"
-    depends_on:
-      - enable-gateway
+      - "8081:8080"
     environment:
-      VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
-      VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
-      VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
+      VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:80/api'
+      VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:8081/management'
+      VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8082/design'
+      VUE_APP_ENABLE_WEBAPP_MARKETPLACE_URL: 'http://localhost:8083/marketplace'
 
-  enable-webapp-design:
-    image: liamvaessen/enable-webapp-design:development
-    container_name: enable-webapp-design
-    ports:
-      - "127.0.0.1:8090:8080"
-    environment:
-      VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:8080'
-      VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:80'
-      VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8090'
+  # enable-webapp-design:
+  #   image: liamvaessen/enable-webapp-design:development
+  #   container_name: enable-webapp-design
+    # ports:
+    #   - "8082:8080"
+    # environment:
+    #   VUE_APP_ENABLE_GATEWAY_URL: 'http://localhost:80/api'
+    #   VUE_APP_ENABLE_WEBAPP_MANAGEMENT_URL: 'http://localhost:8081/management'
+    #   VUE_APP_ENABLE_WEBAPP_DESIGN_URL: 'http://localhost:8082/design'
+    #   VUE_APP_ENABLE_WEBAPP_MARKETPLACE_URL: 'http://localhost:8083/marketplace'
 
 volumes:
   db-data-execution:
