--- a/infrastructure/scripts/preferences.env
+++ b/infrastructure/scripts/preferences.env
@@ -1,2 +1,3 @@
 tenantId=f4944567-e13b-4ed8-a36a-81194dbbddda
 subscriptionId=0f02be5d-90a9-453c-b651-f1e80832e4e5
+appId=8c66f9c5-088c-43cd-8e65-d8b4ffb18d68
