--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,34 +25,86 @@ jobs:
               run: |
                 kubectl apply -f ./infrastructure/kubernetes/.
 
+                - name: Create/ Update Kubernetes Secret
+                run: |
+                  echo "apiVersion: v1
+                  kind: Secret
+                  metadata:
+                    name: enable-database-auth-secret
+                    namespace: enable
+                  type: Opaque
+                  stringData:
+                    connection-string: '${{ secrets.DB_AUTH_CONNECTION_STRING }}'" | kubectl apply -f -
+              
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-database-auth-secret --namespace=enable || true
-                kubectl create secret generic enable-database-auth-secret --namespace=enable --from-literal=connection-string=${{ secrets.DB_AUTH_CONNECTION_STRING }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-database-execution-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  connection-string: '${{ secrets.DB_EXECUTION_CONNECTION_STRING }}'" | kubectl apply -f -
+            
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-database-execution-secret --namespace=enable || true
-                kubectl create secret generic enable-database-execution-secret --namespace=enable --from-literal=connection-string=${{ secrets.DB_EXECUTION_CONNECTION_STRING }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-database-process-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  connection-string: '${{ secrets.DB_PROCESS_CONNECTION_STRING }}'" | kubectl apply -f -
+            
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-database-process-secret --namespace=enable || true
-                kubectl create secret generic enable-database-process-secret --namespace=enable --from-literal=connection-string=${{ secrets.DB_PROCESS_CONNECTION_STRING }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-gateway-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  key-alias: '${{ secrets.GATEWAY_KEY_ALIAS }}'
+                  key-store-password: '${{ secrets.GATEWAY_KEY_STORE_PASSWORD }}'" | kubectl apply -f -
+            
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-gateway-secret --namespace=enable || true
-                kubectl create secret generic enable-gateway-secret --namespace=enable --from-literal=key-alias=${{ secrets.GATEWAY_KEY_ALIAS }} --from-literal=key-store-password=${{ secrets.GATEWAY_KEY_STORE_PASSWORD }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-rabbitmq-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  username: '${{ secrets.RABBITMQ_USERNAME }}'
+                  password: '${{ secrets.RABBITMQ_PASSWORD }}'" | kubectl apply -f -
+            
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-rabbitmq-secret --namespace=enable || true
-                kubectl create secret generic enable-rabbitmq-secret --namespace=enable --from-literal=username=${{ secrets.RABBITMQ_USERNAME }} --from-literal=password=${{ secrets.RABBITMQ_PASSWORD }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-service-api-auth-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  jwt-key: '${{ secrets.SERVICE_AUTH_JWT_KEY }}'
+                  jwt-issuer: '${{ secrets.SERVICE_AUTH_JWT_ISSUER }}'
+                  jwt-audience: '${{ secrets.SERVICE_AUTH_JWT_AUDIENCE }}'" | kubectl apply -f -
+            
             - name: Create/ Update Kubernetes Secret
               run: |
-                kubectl delete secret enable-service-api-auth-secret --namespace=enable || true
-                kubectl create secret generic enable-service-api-auth-secret --namespace=enable --from-literal=jwt-key=${{ secrets.SERVICE_AUTH_JWT_KEY }} --from-literal=jwt-issuer=${{ secrets.SERVICE_AUTH_JWT_ISSUER }} --from-literal=jwt-audience=${{ secrets.SERVICE_AUTH_JWT_AUDIENCE }}
-            - name: Create/ Update Kubernetes Secret
-              run: |
-                kubectl delete secret enable-service-api-execution-secret --namespace=enable || true
-                kubectl create secret generic enable-service-encryption-secret --namespace=enable --from-literal=encryption-key=${{ secrets.SERVICE_ENCRYPTION_KEY }}
+                echo "apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: enable-service-encryption-secret
+                  namespace: enable
+                type: Opaque
+                stringData:
+                  encryption-key: '${{ secrets.SERVICE_ENCRYPTION_KEY }}'" | kubectl apply -f -
 
             - name: Apply Kubernetes manifests
               run: |
