--- a/infrastructure/kubernetes/enable-gateway/enable-gateway-ingress.yaml
+++ b/infrastructure/kubernetes/enable-gateway/enable-gateway-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: webapprouting.kubernetes.azure.com
   rules:
-  - host: cyberrytechnologies.nl
+  - host: enable.cyberrytechnologies.nl
     http:
       paths:
       - pathType: Prefix
